--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node server.cjs"
+    "start": "node render-server.cjs"
   },
   "dependencies": {
+    "compression": "^1.8.0",
     "express": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
