--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node render-server.cjs"
+    "start": "node server.js"
   },
   "dependencies": {
     "compression": "^1.8.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
